# kotlin-bazel-starter

./: README.md  WORKSPACE
my_service/: BUILD.bazel
my_service/src/test/kotlin/com/acme/: ExampleTest.kt
