load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_test")

kt_jvm_test(
    name = "tests",
    main_class = "org.junit.platform.console.ConsoleLauncher",
    args = [
        "--select-package=com.acme",
    ],
    srcs = glob(["src/test/kotlin/**/*.kt"]),
    deps = [
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_console",
    ],
)